fix(App): overflow styling

--- a/src/modules/shared/components/Navigation/Navigation.module.scss
+++ b/src/modules/shared/components/Navigation/Navigation.module.scss
@@ -1,10 +1,14 @@
 @import '../../../../styles/settings';
 
 .c-navigation {
+	position: fixed;
+	top: 0;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	width: 100vw;
 	padding: 1.5rem;
+	background: linear-gradient(to bottom, $blue-2x-dark, rgba($blue-2x-dark, 0));
 }
 
 .c-navigation__logo {
