--- a/src/styles/utils/_layout.scss
+++ b/src/styles/utils/_layout.scss
@@ -1,7 +1,12 @@
+.u-main {
+	overflow-y: auto;
+	height: 100vh;
+	padding-top: 90px;
+}
+
 .u-container {
 	max-width: 1200px;
 	width: 100%;
-	height: 100vh;
 	padding: 1.5rem;
 	margin: 0 auto;
 }
